--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.input {
+    @apply focus:ring-2 focus:ring-blue-500 focus:outline-none appearance-none w-full
+    text-sm leading-6 text-slate-900 placeholder-slate-400 rounded-md py-2 pl-2 ring-1
+  ring-slate-200 shadow-sm
+}
